--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </nav>
             <div class="header-text">
                 <p>Web Developer</p>
-                <h1>Hi,I'm <span>Anshul Baghel</span> <br> From Dehi!</h1>
+                <h1>Hi,I'm <span>Anshul Baghel</span> <br> From Delhi!</h1>
             </div>
         </div>
     </div>
